z-index bug fix for navbar

--- a/docs/_sass/_navbar.scss
+++ b/docs/_sass/_navbar.scss
@@ -7,6 +7,8 @@
   height: 3.0rem;
   justify-content: space-between;
   padding: 0.4rem;
+  position: relative;
+  z-index: 999;
 }
 
 .navbar-menu {
